# style_transfer_web

./: README.md  app.py  pyproject.toml  requirements.txt  transfer.py  utils.py
static/: main.css  main.js
templates/: base.html  index.html
